cm4all-workshop (2.0.35) unstable; urgency=low

  * added control channel, can be used to send control commands to the daemon
    - VERBOSE sets log level
  * remove libdaemon dependency

 --   

cm4all-workshop (2.0.34) unstable; urgency=low

  * workshop: fix assertion failure with too many command-line arguments
  * raise the command-line argument limit from 32 to 4096

 -- Max Kellermann <mk@cm4all.com>  Tue, 21 Nov 2017 11:49:15 -0000

cm4all-workshop (2.0.33) unstable; urgency=low

  * workshop: fix assertion failure

 -- Max Kellermann <mk@cm4all.com>  Tue, 14 Nov 2017 18:55:48 -0000

cm4all-workshop (2.0.32) unstable; urgency=low

  * workshop: add control channel for job processes

 -- Max Kellermann <mk@cm4all.com>  Mon, 13 Nov 2017 12:02:45 -0000

cm4all-workshop (2.0.31) unstable; urgency=low

  * workshop: fix schema support for "log" and "enabled" columns

 -- Max Kellermann <mk@cm4all.com>  Wed, 08 Nov 2017 10:39:38 -0000

cm4all-workshop (2.0.30) unstable; urgency=low

  * spawn: wait & try again after "Unit cm4all-beng-spawn.scope already exists"
  * fix shutdown crash bug

 -- Max Kellermann <mk@cm4all.com>  Wed, 27 Sep 2017 08:24:57 -0000

cm4all-workshop (2.0.29) unstable; urgency=low

  * fix crash after PostgreSQL host lookup failure
  * log database connection failures at the default verbosity
  * migrate: schema support

 -- Max Kellermann <mk@cm4all.com>  Thu, 21 Sep 2017 17:17:47 -0000

cm4all-workshop (2.0.28) unstable; urgency=low

  * cron: time zone support

 -- Max Kellermann <mk@cm4all.com>  Sat, 16 Sep 2017 11:46:41 -0000

cm4all-workshop (2.0.27) unstable; urgency=low

  * cron: fix hour check in scheduler
  * cron: fix time zone confusion; everything is UTC for now
  * cron: set next_run to 'infinity' for expired "@once" jobs

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 Sep 2017 20:51:09 -0000

cm4all-workshop (2.0.26) unstable; urgency=low

  * fix crash when database is unavailable during startup