@@ -2,6 +2,7 @@ cm4all-workshop (2.0.35) unstable; urgency=low
 
   * added control channel, can be used to send control commands to the daemon
     - VERBOSE sets log level
+    - DISABLE_QUEUE, ENABLE_QUEUE control the queue
   * remove libdaemon dependency
 
  --   
